# kel

./: .gitignore  LICENSE  README.md  __init__.py  app.py  askgpt.py  assist.py  assistant.py  choice_test.py  cli-config.toml  config.toml  constants.py  gatekeeper.py  get_configs.py  inputs.py  my_database.db  openai.bash  pyproject.toml  requirements.txt  results.csv  setup.py  summon_assistant.py  ut.txt  utils.py
app/: __version__.py
app/assistant/: assist_test.py  summon_assistant.py
app/config/: get_configs.py
app/constants/: constants.py
app/gpt/: askanthropic.py  askgpt.py  askollama.py  askopenai.py
app/inputs/: gatekeeper.py  inputs.py
app/utils/: cost.py  utils.py
bash-utils/: release.sh
src/app/config/: get_configs.py
src/app/gpt/: askgpt.py  askollama.py
src/app/inputs/: inputs.py
src/app/utils/: utils.py
src/kel/: __main__.py  __version__.py
src/kel/assistant/: summon_assistant.py
src/kel/config/: get_configs.py
src/kel/constants/: base_price.py  constants.py
src/kel/gpt/: askanthropic.py  askgoogle.py  askgpt.py  askollama.py  askopenai.py
src/kel/inputs/: gatekeeper.py  inputs.py
src/kel/utils/: cost.py  models.py  utils.py
tests/: test____main__.py
